tests/snapshots/cli__parent_of.snap
---
source: tests/cli.rs
expression: "run(&[\"list\", \"--parent-of\", \"fix-0003\"])"
---
  [H] fix-0004  p2 feature  Delta child (deps: fix-0002)
